New progress with Scenario 3, detected an issue with OSX